linuxmuster-linbo (2.3.40-0) babo62; urgency=low

  * fixed hostname patch for ubuntu clients, using short name.
  * force ext4 filesystem creation to avoid security prompt.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 21 Dec 2018 11:53:22 +0100

linuxmuster-linbo (2.3.39-1) babo62; urgency=low

  * rebuild.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 16 Dec 2018 14:00:54 +0100

linuxmuster-linbo (2.3.39-0) babo62; urgency=low

  * merged https://github.com/PLanB2008/linuxmuster-linbo.
  * improved nvme ssd recognition (#91).
  * modifications due to ubuntu 18.04 build environment.
  * linbo_cmd: handling clients fully qualified domainname.
  * partially translated console messages to english.
  * update to lts kernel 4.14.88 (#99).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 16 Dec 2018 13:58:27 +0100

linuxmuster-linbo (2.3.38-0) babo62; urgency=low

  * lmn7: fixed missing prefix in grub-mkimage command for bios images in mkgrubhostimg.py.
  * nvm ssd recognition fix.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 13 Sep 2018 09:00:54 +0200

linuxmuster-linbo (2.3.37-0) babo62; urgency=low

  * updated ntfs-3g to 2017.3.23.
  * updated chntpw download address.
  * opsi improvements concerning migration from babo to v7.
  * fixed removement of double windows efi boot entries.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 03 May 2018 16:35:21 +0000

linuxmuster-linbo (2.3.36-0) babo62; urgency=low

  * linbofs: udev rules fixes.
  * linbo_cmd:
    - interruptible return code fix (#83).
    - postscript download fix (#81).
    - update grub return code fix (#82)

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 10 Mar 2018 10:19:40 +0000

linuxmuster-linbo (2.3.35-0) babo62; urgency=low

  * lmn7:
    - minor fixes in rsync scripts.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 16 Feb 2018 18:35:33 +0000

linuxmuster-linbo (2.3.34-0) babo62; urgency=low

  * efi bootorder fix.
