@@ -1,1 +1,1 @@
-LINBO 2.3.40-0
+LINBO 2.3.41-0
