@@ -1,3 +1,9 @@
+linuxmuster-linbo (2.3.41-0) babo62; urgency=low
+
+  * patching reg files with sambadomainname (#104).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 13 Jan 2019 20:34:56 +0100
+
 linuxmuster-linbo (2.3.40-0) babo62; urgency=low
 
   * fixed hostname patch for ubuntu clients, using short name.
